test/src/e2e_vm_tests/test_programs/should_fail/type_alias_shadowing_methods/src/main.sw
script;

#[allow(dead_code)]
struct MyStruct1 {}

#[allow(dead_code)]
type Alias1 = MyStruct1;

#[allow(dead_code)]
type Alias2 = MyStruct1;

impl Alias1 {
    fn foo() {}
}

impl Alias2 {
    fn foo() {}
}

fn main() {
}
